<resources>
    <string name="app_name">SkinForm</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hyperlink"><a href="http://www.skinform.sk/">www.skinform.sk</a></string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="action_login_button">Prihlásiť sa</string>
    <string name="action_profile_button">Profil</string>
    <string name="action_logout_button">Odhlásiť sa</string>
    <string name="action_menu_button">Menu</string>
    <string name="very_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="res_note">Žiadna poznámka.</string>
    <string name="res_start_time">Čas začiatku</string>
    <string name="res_end_time">Čas konca</string>
    <string name="res_service">Objednaná služba</string>
    <string name="service_title_hint">Názov služby</string>
    <string name="add_service_btn">Hotovo</string>
    <string name="service_picture_select">Výber obrázka</string>
    <string name="service_description_hint">Popis</string>
    <string name="service_duration">Dobra trvania v minútach</string>
    <string name="service_info">Popis služby</string>
    <string name="service_detail_description">Popis služby</string>
    <string name="service_detail_duration">Priemerný čas trvania služby</string>
    <string name="login_email">Poúživateľský email</string>
    <string name="login_button">Prihlásiť</string>
    <string name="login_password">Heslo</string>
    <string name="register_button">Registrácia</string>
    <string name="LoginBanner">Prihlásenie</string>

    <string name="register_userEmail">Poúživateľský email</string>
    <string name="register_userPhone">Telefónne číslo</string>
    <string name="RegisterBanner">Registrácia</string>
    <string name="register_fullName">Meno</string>
    <string name="register_userPassword">Heslo</string>
    <string name="resgister_second_name">Priezvisko</string>


    <string name="preference_file_key">SharedData</string>
    <string name="review_text_hint">Napíšte recenziu</string>
    <string name="review_submit">Uverejni recenziu</string>
    <string name="User">Meno</string>
    <string name="create_new_reservation">Rezervovať termín</string>
    <string name="send_message_toUser">Poslať správu</string>
    <string name="first_day_week">Nedeľa</string>
    <string name="seventh_day_week">Sobota</string>
    <string name="sixth_day_week">Piatok</string>
    <string name="fifth_day_week">Štvrtok</string>
    <string name="fourth_day_week">Streda</string>
    <string name="third_day_week">Utorok</string>
    <string name="second_day_week">Pondelok</string>
    <string name="special_date_hours">Špeciálne otváracie hodiny:</string>
    <string name="save_open_hours">Uložiť otváracie hodiny</string>
    <string name="services">Ponúkané kozmetické služby</string>
    <string name="openHoursInfo">Otváracie hodiny</string>
    <string name="reservations_info">Rezervácie</string>
    <string name="hodnoteniaTitle">Recenzie</string>
    <string name="choosen_date">7.12.1999</string>
    <string name="choosen_time">05:22</string>
    <string name="choose_services">žiadne služby</string>
    <string name="note_u">Poznámka</string>
    <string name="date_note">Dátum</string>
    <string name="time_note">Čas</string>
    <string name="services_note">Služby</string>
    <string name="submit_res">Vytvoriť rezervaciu</string>
    <string name="pick_services">Vybrať</string>
    <string name="pick_time">Vybrať</string>
    <string name="pick_date">Vybrať</string>
    <string name="time_expecting">Trvanie procedúry:</string>
    <string name="po_li">Pošli</string>
    <string name="pozn_mka">Poznámka:</string>
    <string name="prida_d_tum">Pridať dátum</string>


</resources>