<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/uName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/register_fullName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/uPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/register_userPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/uName"
        app:layout_constraintTop_toBottomOf="@+id/uPhone" />

    <Button
        android:id="@+id/SubmitRegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="44dp"
        android:onClick="RegisterButton"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="64dp"
        android:onClick="LoginButton"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/uEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/register_userEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/uName"
        app:layout_constraintTop_toBottomOf="@+id/uSecondName" />

    <EditText
        android:id="@+id/uPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/register_userPhone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/uName"
        app:layout_constraintTop_toBottomOf="@+id/uEmail" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_marginTop="68dp"
        android:text="@string/RegisterBanner"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/uSecondName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/resgister_second_name"
        app:layout_constraintEnd_toEndOf="@+id/uName"
        app:layout_constraintTop_toBottomOf="@+id/uName" />


</androidx.constraintlayout.widget.ConstraintLayout>