<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/submitServiceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:layout_marginEnd="44dp"
                android:layout_marginTop="20dp"
                android:text="@string/add_service_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serviceDuration"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/serviceTitle"
                android:layout_width="276dp"
                android:layout_height="49dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/service_title_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/serviceImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serviceTitle"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <Button
                android:id="@+id/servicePictureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/service_picture_select"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serviceImage" />

            <EditText
                android:id="@+id/serviceDescription"
                android:layout_width="267dp"
                android:layout_height="49dp"
                android:layout_marginTop="24dp"
                android:ems="10"

                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:hint="@string/service_description_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.527"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/servicePictureBtn"
                />

            <EditText
                android:id="@+id/serviceDuration"
                android:layout_width="117dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serviceDescription" />

            <TextView
                android:id="@+id/serviceDurationInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/service_duration"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/serviceDuration"
                app:layout_constraintHorizontal_bias="0.981"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serviceDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>>

</androidx.constraintlayout.widget.ConstraintLayout>